--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <main>
             <h1>Isabelle Paulino</h1>
-            <p>Engenheira Química, analista sênior</p>
+            <p>Engenheira Química, Analista Sênior</p>
         </main>
 
         <div class="container">
